--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
-    "@babel/register": "^7.14.5"
+    "@babel/register": "^7.14.5",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.4.1"
   }
 }
